# loxpp

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  vcpkg.json
.agents/skills/cpp-style-review/: SKILL.md
.agents/skills/cpp-style-review/references/: conventions-reference.md
src/: CMakeLists.txt  main.cpp
src/lox/: lox.cpp  lox.hpp  scanner.cpp  scanner.hpp  token.hpp
tests/: CMakeLists.txt  lox_test.cpp
tools/: CMakeLists.txt  gen_ast.cpp  types.hpp  utils.cpp  utils.hpp
